--- a/Alphametrica/Alphametrica/Info.plist
+++ b/Alphametrica/Alphametrica/Info.plist
@@ -22,6 +22,7 @@
 		<string>Merriweather-Light.ttf</string>
 		<string>Merriweather-LightItalic.ttf</string>
 		<string>Merriweather-Regular.ttf</string>
+		<string>Roboto-Regular.ttf</string>
 	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
